--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ httpcore==1.0.9
 httpx==0.28.1
 huggingface-hub==0.36.0
 idna==3.11
+imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
 jiter==0.11.1
 joblib==1.5.2
