--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
 audioread==3.0.1
+av==16.0.1
 blinker==1.9.0
 blis==1.3.0
 cachetools==6.2.1
@@ -13,14 +14,18 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
 cloudpathlib==0.23.0
+coloredlogs==15.0.1
 confection==0.1.5
+ctranslate2==4.6.0
 cymem==2.0.11
 decorator==5.2.1
 distro==1.9.0
 dotenv==0.9.9
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+faster-whisper==1.2.0
 filelock==3.20.0
 filetype==1.2.0
+flatbuffers==25.9.23
 fsspec==2025.9.0
 gitdb==4.0.12
 GitPython==3.1.45
@@ -35,6 +40,7 @@ hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
 huggingface-hub==0.36.0
+humanfriendly==10.0
 idna==3.11
 imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
@@ -64,6 +70,7 @@ networkx==3.5
 nltk==3.9.2
 numba==0.62.1
 numpy==2.3.4
+onnxruntime==1.23.2
 openai==2.6.1
 orjson==3.11.4
 packaging==25.0
